--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -57,7 +57,7 @@
 		'custom/nav',
 		'custom/close-bar',
 		'custom/pages',
-		'custom/images',
+		'custom/figures',
 		'custom/spacing',
 		'custom/filters',
 		'custom/modal',
