--- a/_scss/custom/_figures.scss
+++ b/_scss/custom/_figures.scss
@@ -5,7 +5,9 @@
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
-// vertical center text
+
+
+// vertical center text over image .....................................
 
 figure {
 	position: relative;
@@ -46,6 +48,11 @@ figcaption span h3 {
 figcaption.tint {
 	background: rgba(50, 50, 50, 0.5); 
 }
+
+
+
+
+// story page video btn ................................................
 
 figcaption a.btn-play {
 	display: block;
