--- a/_scss/custom/_modal.scss
+++ b/_scss/custom/_modal.scss
@@ -1,11 +1,13 @@
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   MODAL 
+   REAL MODAL 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
 
+
+// modal window ........................................................
 
 .reveal {
     padding: 2.5rem;
@@ -16,6 +18,11 @@
 .reveal:focus {
 	outline: none !important;
 }
+
+
+
+
+// close btn ...........................................................
 
 .reveal .close-button {
     color: #fff;
@@ -31,3 +38,6 @@
     top: -0.2rem;
     right: 0.38rem;
 }
+
+
+
