--- a/_scss/custom/_close-bar.scss
+++ b/_scss/custom/_close-bar.scss
@@ -6,7 +6,15 @@
 
 
 
+
+// opacity variable ....................................................
+
 $hover-opacity: 0.75;
+
+
+
+
+// close bar ...........................................................
 
 .close-bar {
 	background-color: $dark-gray;
@@ -54,6 +62,11 @@ $hover-opacity: 0.75;
 	padding: 0.5rem 0;
 	border-bottom: 1px solid $warm-gray-3;
 }
+
+
+
+
+// close bar links .....................................................
 
 .close-bar .right a {
 	color: #fff;
