--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -1,10 +1,13 @@
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   FILTERS 
+   FILTERS (INVESTMENT AND NEWS PAGES)
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
+
+
+// parent child categories .............................................
 
 .parent-categories,
 .child-categories {
@@ -56,7 +59,11 @@
 	color: $dark-gray;
 }
 
-// for news page with single parent item
+
+
+
+// special for news page with single parent item .......................
+
 .parent-categories span.single.active {
 	padding-left: 0;
 	padding-right: 0;
@@ -70,8 +77,7 @@
 
 
 
-/* grid image width for different screen sizes 
------------------------------------------------------------------------- */
+// investments logo grid (deprecated to be removed) ....................
 
 .company {
 	float: left;
@@ -93,7 +99,6 @@
 	
 }
 
-
 .child-list .company a {
 	padding: 1rem;
 	display: block;
@@ -103,9 +108,7 @@
 
 
 
-
-/* temporary for development 
------------------------------------------------------------------------- */
+// temporary for development ...........................................
 
 .child-list .company a {
 	position: relative;
@@ -123,54 +126,3 @@
 
 
 
-
-/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  
-   I-LIN: PARENT AND CHILD CATEGORY FILTER TAGS 
-   
-|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
-/*
-.parent-categories button.secondary,
-.parent-categories .button.secondary {
-  width: 100%;
-}
-
-.parent-categories button.small,
-.parent-categories .button.small {
-  padding: 0.5rem 0;
-}
-
-.parent-categories button.small:hover,
-.parent-categories .button.small:hover {
-  background-color: #666;
-  color: #fff;
-}
-
-.parent-categories button.small.active,
-.parent-categories .button.small.active {
-  background-color: #444;
-  color: #fff;
-}
-
-.parent-categories .columns {
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
-}
-
-.child-categories button.small,
-.child-categories .button.small {
-  padding: 0.5rem 1rem;
-  background-color: #bbb;
-}
-
-.child-categories button.small:hover,
-.child-categories .button.small:hover {
-  background-color: #ddd;
-}
-
-.child-categories button.small.active,
-.child-categories .button.small.active {
-  background-color: #444;
-  color: #fff;
-}
-*/
