--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -1,13 +1,13 @@
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   BASE TYPOGRAPHY 
+   SITE TYPOGRAPHY 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
 
 
-// reduce flash of unstyled text .......................................
+// reduce flash of unstyled text loading typekit........................
 
 .wf-loading h1 {
 	visibility: hidden;
@@ -21,7 +21,6 @@
 
 
 // heads: h1 ...........................................................    
-
 
 h1 {
     font-family: "adobe-caslon-pro",serif;
@@ -82,8 +81,7 @@ h1 {
 
 
 
-// heads: h2 ...........................................................    
-
+// heads: h2-h6 ...........................................................    
 
 h2 {
 	font-family: "adobe-caslon-pro",serif;
@@ -128,6 +126,8 @@ h4 {
 	
 }
 
+// adds rule below h4 with span
+
 h4 span {
 	display: inline-block;
 	margin-bottom: 0.5rem;
@@ -157,6 +157,8 @@ h5 {
 	
 }
 
+// adds rule below h5 with span
+
 h5 span {
 	display: inline-block;
 	margin-bottom: 0.5rem;
@@ -178,6 +180,8 @@ h6 {
 	}
 	
 }
+
+// adds rule below h6 with span
 
 h6 span {
 	display: inline-block;
@@ -216,6 +220,7 @@ blockquote {
 	}
 
 }
+
 
 
 
@@ -314,7 +319,8 @@ p a:hover {
 
 
 
-// custom size for text list bullets ...................................
+
+// custom size for text list bullets, yup ..............................
 
 .block li {
 	list-style: none;
@@ -332,6 +338,7 @@ p a:hover {
 
 
 
+
 // links with right arrow ..............................................
 
 a.view-more {
@@ -342,7 +349,7 @@ a.view-more {
 	color: #000;
 	opacity: 0.5;
 	border-top: 1px solid #151f25;
-	background-image: url('../img/arrow-right-blk.svg');
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" width="21px" height="15px" viewBox="0 0 21 15" xml:space="preserve" enable-background="new 0 0 21 15"><metadata><x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c067 79.157747, 2015/03/30-23:40:42"><rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"><rdf:Description rdf:about=""/></rdf:RDF></x:xmpmeta></metadata><path d="M13.3 0c-0.4 0-0.7 0.3-0.7 0.7 0 0.2 0 0.4 0.2 0.5l5.9 5.6H0.7C0.3 6.8 0 7.1 0 7.5c0 0.4 0.3 0.7 0.7 0.7h17.9l-5.9 5.6c-0.2 0.1-0.2 0.3-0.2 0.5 0 0.4 0.3 0.7 0.7 0.7 0.2 0 0.3-0.1 0.5-0.2l7-6.8C20.9 7.9 21 7.7 21 7.5c0-0.2-0.1-0.4-0.2-0.5l-7-6.8C13.6 0.1 13.4 0 13.3 0" fill="#151F25"/></svg>');
 	background-repeat: no-repeat;
 	background-size: 21px 15px;
 	background-position: 100% 60%;
@@ -368,6 +375,15 @@ a.view-more:hover {
 }
 
 
+
+
+// link with up arrow (news) ...........................................
+
+a.view-more.up {
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" width="15px" height="21px" viewBox="0 0 15 21" xml:space="preserve" enable-background="new 0 0 15 21"><metadata><x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c067 79.157747, 2015/03/30-23:40:42"><rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"><rdf:Description rdf:about=""/></rdf:RDF></x:xmpmeta></metadata><path d="M0 7.7c0 0.4 0.3 0.7 0.7 0.7 0.2 0 0.4 0 0.5-0.2l5.6-5.9v17.9c0 0.4 0.3 0.7 0.7 0.7 0.4 0 0.7-0.3 0.7-0.7V2.4l5.6 5.9c0.1 0.2 0.3 0.2 0.5 0.2 0.4 0 0.7-0.3 0.7-0.7 0-0.2-0.1-0.3-0.2-0.5L8 0.2C7.9 0.1 7.7 0 7.5 0 7.3 0 7.1 0.1 7 0.2l-6.8 7C0.1 7.4 0 7.6 0 7.7" fill="#151F25"/></svg>');
+	background-size: 15px 21px;
+	background-position: 96% 60%;
+}
 
 
 
