--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -77,34 +77,158 @@
 
 
 
-// investments logo grid (deprecated to be removed) ....................
+// logo grid on home and investment pages ..............................
 
-.company {
+.logo-grid {
 	float: left;
 	margin: 0;
 	font-size: 0;
 	line-height: 0;
     cursor: pointer;
-	width: 100%;
-
+	width: 100vw;
+	height: 98vw;
+	border-bottom: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 	@include breakpoint(medium) {
 		width: 50%;
+		height: 48vw;
 	}
 	@include breakpoint(large) {
 		width: 33.333333%;
+		height: 30vw;
 	}
 	@include breakpoint(xlarge) {
 		width: 25%;
+		height: 17.5rem;
 	}
-	
 }
 
-.child-list .company a {
-	padding: 1rem;
+// edgy: grayscale filter and object fit, oooh!
+
+.logo-grid img {
+	filter: grayscale(1);
+	transition: filter 0.375s linear;
 	display: block;
-	margin-bottom: 0;
+    padding: 0;
+    max-width: 50%;
+    max-height: 50%;
+	width: auto;
+    height: auto;
+    object-fit: contain;
 }
 
+.logo-grid:hover img {
+	filter: grayscale(0);
+}
+
+// removing outer borders for each size
+
+/*
+@include breakpoint(medium) {
+	.logo-grid {
+		border-right: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(2n+2) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+2) {
+		border-bottom: none;
+	}
+}
+
+@include breakpoint(large) {
+	.logo-grid:nth-child(2n+2) {
+		border-right: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(3n+3) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+3) {
+		border-bottom: none;
+	}
+}
+
+@include breakpoint(xlarge) {
+	.logo-grid:nth-child(3n+3) {
+		border-right: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(4n+4) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+4) {
+		border-bottom: none;
+	}
+}
+*/
+
+
+
+
+// tests ...............................................................
+
+
+// 3 columns in medium grid
+
+@include breakpoint(medium) {
+	.logo-grid {
+		border-right: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(2n+1):nth-last-child(-n+2),
+	.logo-grid:nth-child(2n+1):nth-last-child(-n+2) ~ .logo-grid {
+	  	border-bottom: none;
+	}
+	.logo-grid:nth-child(2n+2) {
+		border-right: none;
+	}
+	.logo-grid:last-child {
+	  	border-bottom: none !important;
+	}
+}
+
+@include breakpoint(large) {
+	.logo-grid:nth-child(2n+1):nth-last-child(-n+2),
+	.logo-grid:nth-child(2n+1):nth-last-child(-n+2) ~ .logo-grid {
+	  	border-bottom: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(3n+1):nth-last-child(-n+3),
+	.logo-grid:nth-child(3n+1):nth-last-child(-n+3) ~ .logo-grid {
+	  	border-bottom: none;
+	}
+	.logo-grid:nth-child(2n+2) {
+		border-right: 1px solid #ccc;
+	}
+	.logo-grid:nth-child(3n+3) {
+		border-right: none;
+	}
+}
+
+@include breakpoint(xlarge) {
+	.logo-grid:nth-child(3n+1):nth-last-child(-n+3),
+	.logo-grid:nth-child(3n+1):nth-last-child(-n+3) ~ .logo-grid {
+	  	border-bottom: 1px solid #ccc;
+	}
+
+	.logo-grid:nth-child(4n+1):nth-last-child(-n+4),
+	.logo-grid:nth-child(4n+1):nth-last-child(-n+4) ~ .logo-grid {
+	  	border-bottom: none;
+	}
+
+	.logo-grid:nth-child(3n+3) {
+		border-right: 1px solid #ccc;
+	}
+
+	.logo-grid:nth-child(4n) {
+		border-right: none;
+	}
+
+	.logo-grid:nth-child(4n):nth-last-child(-n+4) ~ .logo-grid {
+	  	border-bottom: none;
+	}
+
+}
 
 
 
