--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -124,88 +124,62 @@
 	filter: grayscale(0);
 }
 
-// removing outer borders for each size
 
-/*
+
+
+// removing outer borders for each size, oy! ...........................
+
+// 2 columns in medium grid
+
 @include breakpoint(medium) {
+	
 	.logo-grid {
 		border-right: 1px solid #ccc;
 	}
-	.logo-grid:nth-child(2n+2) {
-		border-right: none;
-	}
-	.logo-grid:nth-last-child(-n+2) {
-		border-bottom: none;
-	}
-}
-
-@include breakpoint(large) {
-	.logo-grid:nth-child(2n+2) {
-		border-right: 1px solid #ccc;
-	}
-	.logo-grid:nth-child(3n+3) {
-		border-right: none;
-	}
-	.logo-grid:nth-last-child(-n+3) {
-		border-bottom: none;
-	}
-}
-
-@include breakpoint(xlarge) {
-	.logo-grid:nth-child(3n+3) {
-		border-right: 1px solid #ccc;
-	}
-	.logo-grid:nth-child(4n+4) {
-		border-right: none;
-	}
-	.logo-grid:nth-last-child(-n+4) {
-		border-bottom: none;
-	}
-}
-*/
-
-
-
-
-// tests ...............................................................
-
-
-// 3 columns in medium grid
-
-@include breakpoint(medium) {
-	.logo-grid {
-		border-right: 1px solid #ccc;
-	}
+	
+	// this is crazy pseudo targeting tricks from 
+	//_keithclark.co.uk/articles/targeting-first-and-last-rows-in-css-grid-layouts/
 	.logo-grid:nth-child(2n+1):nth-last-child(-n+2),
 	.logo-grid:nth-child(2n+1):nth-last-child(-n+2) ~ .logo-grid {
 	  	border-bottom: none;
 	}
+	
 	.logo-grid:nth-child(2n+2) {
 		border-right: none;
 	}
+	
 	.logo-grid:last-child {
 	  	border-bottom: none !important;
 	}
 }
 
+// 3 columns in large grid
+
 @include breakpoint(large) {
+	
 	.logo-grid:nth-child(2n+1):nth-last-child(-n+2),
 	.logo-grid:nth-child(2n+1):nth-last-child(-n+2) ~ .logo-grid {
 	  	border-bottom: 1px solid #ccc;
 	}
+	
 	.logo-grid:nth-child(3n+1):nth-last-child(-n+3),
 	.logo-grid:nth-child(3n+1):nth-last-child(-n+3) ~ .logo-grid {
 	  	border-bottom: none;
 	}
+	
 	.logo-grid:nth-child(2n+2) {
 		border-right: 1px solid #ccc;
 	}
+	
 	.logo-grid:nth-child(3n+3) {
 		border-right: none;
 	}
 }
 
+// 4 columns in xlarge grid
+
 @include breakpoint(xlarge) {
+
 	.logo-grid:nth-child(3n+1):nth-last-child(-n+3),
 	.logo-grid:nth-child(3n+1):nth-last-child(-n+3) ~ .logo-grid {
 	  	border-bottom: 1px solid #ccc;
