modify nav underline active, story img 1 shorter

--- a/_scss/custom/_nav.scss
+++ b/_scss/custom/_nav.scss
@@ -101,6 +101,10 @@
 	width: 100%;
 }
 
+.mobilenav li a.active {
+	text-decoration: underline;
+}
+
 .mobilenav li a:hover {
 	color: $warm-gray-2;
 }
