--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -61,8 +61,8 @@ h1 {
 }
 
 
-.desktop-video-wrap h1,
-.mobile-static-wrap h1 {
+.desktop-video-wrapx h1,
+.mobile-static-wrapx h1 {
 	font-style: italic;
 	color: #fff;
 }
