--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -3832,7 +3832,7 @@ a.view-more.up {
 .slant-wrap {
   position: relative;
   width: 100%;
-  height: 45vh;
+  height: 50vh;
   margin-bottom: 5rem; }
 
 .slant-head {
@@ -3929,12 +3929,18 @@ a.view-more.up {
   border-top-color: #f5f5f6;
   border-left-color: #f5f5f6; }
 
-@media screen and (max-width: 800px) and (orientation: landscape) {
-  .slant-wrap {
-    height: 60vh; }
+/*
 
-  .slant-foot {
-    top: 60vh; } }
+@media screen and (max-width: 800px) and (orientation: landscape) {
+
+	.slant-wrap {
+		height: 60vh;
+	}
+	.slant-foot {
+		top: 60vh;
+	}
+}
+*/
 img.full-width {
   width: 100%; }
 
