--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -18,6 +18,53 @@
 }
 
 
+// skewed block with page head..........................................
+
+.block-skew {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	text-align: center;
+	padding-top: 3rem;
+	height: 60vh;
+
+	@include breakpoint(medium) {
+		padding-top: 4rem;
+		height: 50vh;
+	}
+
+	@include breakpoint(large) {
+		padding-top: 5rem;
+		height: 55vh;
+	}
+
+}
+
+.block-skew:after {
+	background: inherit;
+	bottom: 0;
+	content: '';
+	display: block;
+	height: 50%;
+	left: 0;
+	position: absolute;
+	right: 0;
+	transform: skewY(-5deg);
+	transform-origin: 100%;
+	z-index: -1;
+
+	@include breakpoint(xxlarge) {
+		display: none;
+	}
+}
+
+.block-skew h1 {
+	color: #fff;
+}
+
+
 
 
 // block backgrounds (colors in _settings)..............................
@@ -117,36 +164,6 @@
 
 
 
-
-
-		
-		.slant-footxx {
-			position: absolute;
-			left: 0px;
-			right: 0px;
-			bottom: 0;
-			width: 100%;
-			height: auto;
-			padding: 0;
-			margin: 0;
-		}
-		
-		.slant-footxx img {
-			width: 100vw;
-			margin-bottom: -2px;
-			margin-left: 0.1vw;
-		}
-
-		.fucker3 {
-			position: absolute;
-			right: 0;
-			bottom: -5px;
-			width: 100%;
-			height: 60px;
-			padding: 0;
-			margin: 0;
-			overflow: hidden;
-		}
 
 
 
