--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -18,6 +18,8 @@
 }
 
 
+
+
 // skewed block with page head..........................................
 
 .block-skew {
@@ -255,17 +257,42 @@ img.full-width {
 .region-glance .glance-wrap .row h2 {
 	font-style: italic;
 	color: #fff;
+    position: relative;
+    margin-bottom: 3rem;
+}
+
+// the h2 heads have shortened top/bot rules 
+
+.region-glance .glance-wrap h2:after {
+    content: '';
+    position: absolute;
+    top: -1.25rem;
+    bottom: -0.75rem;
+    left: 40%;
+    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
+    right: 40%;
+    width: 20%;
+
+	@include breakpoint(medium) {
+    	left: 30%;
+	    right: 30%;
+	    width: 40%;
+	}
 }
 
 .region-glance .glance-wrap .row p {
 	color: #fff;
-	font-size: 3.48vmax;
+	font-size: 1.25rem;
 
 	@include breakpoint(medium) {
-		font-size: 3.36vw;
+		font-size: 1.45rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.65rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 4.32vmin;
+		font-size: 2.2rem;
 	}
 }
 
@@ -310,31 +337,6 @@ img.full-width {
 		
 	@include breakpoint(medium) {
 		box-shadow: 1px 0 0 0 #fff inset;
-	}
-}
-
-// the heads have shortened top/bot rules 
-
-.region-glance .glance-wrap h2 {
-    position: relative;
-    margin-bottom: 4rem;
-}
-
-.region-glance .glance-wrap h2:after {
-    content: '';
-    position: absolute;
-    top: -1.25rem;
-    bottom: -0.75rem;
-    left: 40%;
-    border-bottom: 1px solid #fff;
-    border-top: 1px solid #fff;
-    right: 40%;
-    width: 20%;
-
-	@include breakpoint(medium) {
-    	left: 30%;
-	    right: 30%;
-	    width: 40%;
 	}
 }
 
